chapter5/ex06/results/task1.txt

Status: FAILED!
Reason: Unable to run main.py
Error:   File "/home/runner/work/9780357421796_python-fundamentals-1e-90d64395-38b0-4952-862a-0c8397e7ddb5/9780357421796_python-fundamentals-1e-90d64395-38b0-4952-862a-0c8397e7ddb5/python/chapter5/ex06/main.py", line 11
    else:
    ^^^^
SyntaxError: invalid syntax

Timestamp: 2024-10-31 00:54:10.517352

Status: FAILED!
Reason: Unable to run main.py
Error:   File "/home/runner/work/9780357421796_python-fundamentals-1e-90d64395-38b0-4952-862a-0c8397e7ddb5/9780357421796_python-fundamentals-1e-90d64395-38b0-4952-862a-0c8397e7ddb5/python/chapter5/ex06/main.py", line 11
    else:
    ^^^^
SyntaxError: invalid syntax

Timestamp: 2024-10-31 00:54:10.517441

Status: FAILED!
Check: 1
Test: 
Reason: 
Error : AssertionError -   File "/home/runner/work/9780357421796_python-fundamentals-1e-90d64395-38b0-4952-862a-0c8397e7ddb5/9780357421796_python-fundamentals-1e-90d64395-38b0-4952-862a-0c8397e7ddb5/python/chapter5/ex06/main.py", line 11
    else:
    ^^^^
SyntaxError: invalid syntax

Timestamp: 2024-10-31 00:54:10.517486

Status: FAILED!
Check: 2
Test: Output is correct 2
Reason: Unable to find 'else:
   print("You are all set with cars.")' in the program.
Error : str - AssertionError
Timestamp: 2024-10-31 00:54:10.518008

Status: FAILED!
Check: 2
Test: 
Reason: 
Error : AssertionError - Failed
Timestamp: 2024-10-31 00:54:10.518050

Status: PASSED!
Check: 3
Test: Declare a variable named `amt` that uses the `len` tuple method
Reason: amt = len(cars)` was found in the program.None
Timestamp: 2024-10-31 00:54:10.518283

Status: FAILED!
Check: 4
Test: Declare a variable named `fav` that uses the `count` tuple method
Reason: Unable to find 'fav = cars.count("coupe")' in the program.
Error : str - AssertionError
Timestamp: 2024-10-31 00:54:10.518574

Status: FAILED!
Check: 4
Test: 
Reason: 
Error : AssertionError - Failed
Timestamp: 2024-10-31 00:54:10.518612
